# LotusEngine

./: .directory  .gitattributes  .gitignore  .gitmodules  AzuriteEngine.kdev4  CMakeCache.txt  CMakeLists.txt  Game.cpp  Game.hpp  LotusEngine  Makefile  README.md  cmakeW.bat  cmake_install.cmake  main.c  main.cpp  test1.kdev4
.kdev4/: AzuriteEngine.kdev4
CMakeModules/: FindGLEW.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
assets/: Enemy.ase  main.lua  metalCrate.ase
assets/scripts/Lotus/: quad.lua
assets/shaders/: basicShader.fs  basicShader.vs
assets/textures/: Player.ase
cmake/modules/: FindGLAD.cmake  FindGLEW.cmake  FindLua.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
examples/benchmark/assets/: main.lua
examples/benchmark/assets/shaders/: basicShader.fs  basicShader.vs  basicShaderES.fs  basicShaderES.vs
examples/bomberdude/assets/: main.lua
examples/bomberdude/assets/shaders/: basicShader.fs
examples/test/assets/shaders/: basicShaderES.fs  textShader.fs
lib/: sdl2 here
src/: Game.cpp  Game.hpp  Point.hpp  main.cpp  notes.txt
src/ai/: ToDo.txt
src/common/: Camera.hpp  Color.hpp  Lerp.hpp  Rect.hpp  Transform.hpp  Translate.hpp
src/core/: Audio.cpp  Audio.hpp  Display.cpp  Display.hpp  Game.cpp  Game.hpp  GameObject.hpp  Graphics.cpp  Graphics.hpp  LotusEngine.cpp  ResourceManager.cpp  ResourceManager.hpp  Time.cpp  Time.hpp
src/engine/: Display.cpp  Display.hpp  Game.cpp  Game.hpp  InputManager.hpp  Shader.cpp  Shader.hpp  Texture2D.hpp  Time.cpp  Time.hpp  glad.c  glad.h  luaExample.txt  main.cpp
src/engine/glad/: glad.c
src/engine/glad/glad/: glad.h
src/graphics/: .gitattributes  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  MeshObject.cpp  MeshObject.hpp  MeshObject2D.cpp  MeshObject2D.hpp  Quad.cpp  Quad.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Texure.hpp  Vertex.hpp
src/graphics/lua/: lua_quad.hpp
src/graphics/opengl/: Mesh.cpp  Mesh.hpp  MeshBuffer.cpp  MeshBuffer.hpp  Shader.cpp  Shader.hpp  TextMeshBuffer.cpp  TextMeshBuffer.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/input/: Input.cpp  Input.hpp  InputConstants.hpp
src/lua/: lua_graphics.hpp
src/math/: Octree.hpp
